fix: dark mode colors fixed and screen background unified

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -132,6 +132,13 @@
   }
 }
 
+body {
+  @apply bg-muted;
+  &.dark {
+    @apply bg-background;
+  }
+}
+
 .lucide {
   stroke-width: 1.5px;
 }
